[package]
name = "egui_test"
version = "0.0.0"
edition = "2021"

[dependencies]
bytemuck = "1.13.1"
chrono = "0.4.24"
egui = "0.22.0"
egui-wgpu = "0.22.0"
winit_backend = { path = "./winit_backend" }
wgpu_backend = { path = "./wgpu_backend" }
epi = "0.17.0"
pollster = "0.3.0"
wgpu = "0.16.1"
winit = "0.28.6"
egui_dock = "0.6.1"

[workspace]
members = [
    "wgpu_backend",
    "winit_backend",
]
